--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>LibgenEdu</title><meta content="width=device-width, initial-scale=1.0" name="viewport"><meta content="free courses, libgen, free books, ......................" name="keywords"><meta content="A compendium to provide access to world class education, free forever." name="description"> <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> </head><body> <header class="header header-hide" id="header"><div class="container"><div class="pull-left" id="logo"><h1><span>LibgenEdu</span></h1></div></div> </header> <section class="padd-section text-center wow fadeInUp" id="features"><div class="container"><div class="section-title text-center"><h1>World Class Education, Free Forever.</h1><br><p class="separator">This website is an attempt to provide a compendium of the best free available resources for education.<br> Because Education should be a basic human right and not something to profit from.<br> <br> LibgenEdu is not related to <a href="http://Libgen.rs" target="_blank">Libgen.rs</a> (which should not be used to download books just as torrents should not be used to download movies).</p></div></div><div class="container"><div class="row"><div class="col-md-6 col-lg-4"><div class="feature-block"><h4>Early School</h4><p><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></p><p><a href="https://thecrashcourse.com/" target="_blank">Crash Course</a></p><p><a href="https://play.google.com/store/apps/details?id=uk.org.nationalnumeracy.stardashstudios" target="_blank">Maths Game</a></p></div></div><div class="col-md-6 col-lg-4"><div class="feature-block"><h4>High School</h4><p><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></p><p><a href="https://thecrashcourse.com/" target="_blank">Crash Course</a></p><p><a href="https://ocw.mit.edu/index.htm" target="_blank">MIT OCW</a></p></div></div><div class="col-md-6 col-lg-4"><div class="feature-block"><h4>College</h4><p><a href="https://ocw.mit.edu/index.htm" target="_blank">MIT OCW</a></p><p><a href="https://www.edx.org/" target="_blank">EDx</a></p><p><a href="https://www.CourseEra.org/" target="_blank">CourseEra</a></p></div></div><div class="col-md-6 col-lg-4"><div class="feature-block"><h4>Computer science</h4><p><a href="https://online-learning.harvard.edu/course/cs50-introduction-computer-science?delta=0" target="_blank">Harvard CS50</a></p><p><a href="https://cs50.harvard.edu/x/2020/" target="_blank">Harvard CS50 (free certificate)</a></p></div></div><div class="col-md-6 col-lg-4"><div class="feature-block"><h4>Value Investing</h4><p><a href="https://www.goodreads.com/book/show/106835.The_Intelligent_Investor" target="_blank">Intelligent Investor</a></p><p><a href="https://www.goodreads.com/book/show/944652.Poor_Charlie_s_Almanack" target="_blank">Poor Charlie's Almanac</a></p><p><a href="https://www.goodreads.com/book/show/203409.Security_Analysis" target="_blank">Security Analysis</a></p><p><a href="https://www.youtube.com/channel/UCe3qdG0A_gr-sEdat5y2twQ" target="_blank">CA Rachana Ranade</a></p></div></div><div class="col-md-6 col-lg-4"><div class="feature-block"><h4>Taxations</h4><p><a href="https://www.youtube.com/channel/UCVOTBwF0vnSxMRIbfSE_K_g" target="_blank">Law Advisor</a></p><p><a href="https://napkinfinance.com/" target="_blank">Napkin Finance</a></p></div></div></div></div><div class="container"><div class="section-title text-center"><p class="separator">Tips: For a distraction free internet.</p></div><div class="row"><div class="col-md-6 col-lg-4"><div class="feature-block"><h4>Ublock origin</h4><p><a href="https://github.com/gorhill/uBlock#installation" target="_blank">Ad free browsing</a></p></div></div><div class="col-md-6 col-lg-4"><div class="feature-block"><h4>Youtube Vanced</h4><p><a href="https://vancedapp.com/" target="_blank">Ad free youtube</a></p></div></div><div class="col-md-6 col-lg-4"><div class="feature-block"><h4>Firefox</h4><p><a href="https://medium.com/swlh/give-firefox-a-chance-for-a-faster-calmer-and-distraction-free-internet-b90f656566e1" target="_blank">Calm browsing</a></p></div></div></div></div> </section> <footer class="footer"><div class="container"><div class="row"><div class="col"><div class="footer-logo"><p class="navbar-brand">LibgenEdu</p><p>On a path of constant self improvement.<br> The website was made because a lot of apps are selling dreams.</p></div></div><div class="col"><div class="footer-logo"><p class="navbar-brand">Sharing is caring.</p><p>Consider sharing on social media:</p><p>Hey, check out this cool website that is trying to provide access to world class free education, "LibgenEdu".</p></div></div></div></div><div class="copyrights"><div class="container"><p>Designed by Nitesh Shail</p></div></div> </footer><a class="back-to-top" href="#"><i>^</i></a><link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" media="print" onload="this.media='all'" rel="stylesheet"><link href="style.css" media="print" onload="this.media='all'" rel="stylesheet"> <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script> <script src="main.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>LibgenEdu</title>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+        <meta content="free courses, libgen, free books, ......................" name="keywords" />
+        <meta content="A compendium to provide access to world class education, free forever." name="description" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    </head>
+    <body>
+        <header class="header header-hide" id="header">
+            <div class="container">
+                <div class="pull-left" id="logo">
+                    <h1><span>LibgenEdu</span></h1>
+                </div>
+            </div>
+        </header>
+        <section class="padd-section text-center wow fadeInUp" id="features">
+            <div class="container">
+                <div class="section-title text-center">
+                    <h1>World Class Education, Free Forever.</h1>
+                    <br />
+                    <p class="separator">
+                        This website is an attempt to provide a compendium of the best free available resources for education.<br />
+                        Because Education should be a basic human right and not something to profit from.<br />
+                        <br />
+                        LibgenEdu is not related to <a href="http://Libgen.rs" target="_blank">Libgen.rs</a> (which should not be used to download books just as torrents should not be used to download movies).
+                    </p>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Early School</h4>
+                            <p><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></p>
+                            <p><a href="https://thecrashcourse.com/" target="_blank">Crash Course</a></p>
+                            <p><a href="https://play.google.com/store/apps/details?id=uk.org.nationalnumeracy.stardashstudios" target="_blank">Maths Game</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>High School</h4>
+                            <p><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></p>
+                            <p><a href="https://thecrashcourse.com/" target="_blank">Crash Course</a></p>
+                            <p><a href="https://ocw.mit.edu/index.htm" target="_blank">MIT OCW</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>College</h4>
+                            <p><a href="https://ocw.mit.edu/index.htm" target="_blank">MIT OCW</a></p>
+                            <p><a href="https://www.edx.org/" target="_blank">EDx</a></p>
+                            <p><a href="https://www.CourseEra.org/" target="_blank">CourseEra</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Computer science</h4>
+                            <p><a href="https://online-learning.harvard.edu/course/cs50-introduction-computer-science?delta=0" target="_blank">Harvard CS50</a></p>
+                            <p><a href="https://cs50.harvard.edu/x/2020/" target="_blank">Harvard CS50 (free certificate)</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Value Investing</h4>
+                            <p><a href="https://www.goodreads.com/book/show/106835.The_Intelligent_Investor" target="_blank">Intelligent Investor</a></p>
+                            <p><a href="https://www.goodreads.com/book/show/944652.Poor_Charlie_s_Almanack" target="_blank">Poor Charlie's Almanac</a></p>
+                            <p><a href="https://www.goodreads.com/book/show/203409.Security_Analysis" target="_blank">Security Analysis</a></p>
+                            <p><a href="https://www.youtube.com/channel/UCe3qdG0A_gr-sEdat5y2twQ" target="_blank">CA Rachana Ranade</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Taxations</h4>
+                            <p><a href="https://www.youtube.com/channel/UCVOTBwF0vnSxMRIbfSE_K_g" target="_blank">Law Advisor</a></p>
+                            <p><a href="https://napkinfinance.com/" target="_blank">Napkin Finance</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="section-title text-center"><p class="separator">Tips: For a distraction free internet.</p></div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Ublock origin</h4>
+                            <p><a href="https://github.com/gorhill/uBlock#installation" target="_blank">Ad free browsing</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Youtube Vanced</h4>
+                            <p><a href="https://vancedapp.com/" target="_blank">Ad free youtube</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Firefox</h4>
+                            <p><a href="https://medium.com/swlh/give-firefox-a-chance-for-a-faster-calmer-and-distraction-free-internet-b90f656566e1" target="_blank">Calm browsing</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="footer-logo">
+                            <p class="navbar-brand">LibgenEdu</p>
+                            <p>
+                                On a path of constant self improvement.<br />
+                                The website was made because a lot of apps are selling dreams.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="footer-logo">
+                            <p class="navbar-brand">Sharing is caring.</p>
+                            <p>Consider sharing on social media:</p>
+                            <p>Hey, check out this cool website that is trying to provide access to world class free education, "LibgenEdu".</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copyrights">
+                <div class="container"><p>Designed by Nitesh Shail</p></div>
+            </div>
+        </footer>
+        <a class="back-to-top" href="#"><i>^</i></a><link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" media="print" onload="this.media='all'" rel="stylesheet" />
+        <link href="/style.css" media="print" onload="this.media='all'" rel="stylesheet" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <script src="/main.js"></script>
+    </body>
+</html>
