--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                             <h4>Early School</h4>
                             <p><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></p>
                             <p><a href="https://thecrashcourse.com/" target="_blank">Crash Course</a></p>
+                            <p><a href="https://youtube.com/c/tecmath" target="_blank">TecMath</a></p>
                             <p><a href="https://play.google.com/store/apps/details?id=uk.org.nationalnumeracy.stardashstudios" target="_blank">Maths Game</a></p>
                         </div>
                     </div>
