--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 </div>
             </div>
             <div class="copyrights">
-                <div class="container"><p>Designed by Nitesh Shail</p></div>
+                <div class="container"><p>Designed by Someone like You.</p></div>
             </div>
         </footer>
         <a class="back-to-top" href="#"><i>^</i></a><link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" media="print" onload="this.media='all'" rel="stylesheet" />
