--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                             <p><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></p>
                             <p><a href="https://thecrashcourse.com/" target="_blank">Crash Course</a></p>
                             <p><a href="https://youtube.com/c/tecmath" target="_blank">TecMath</a></p>
+                            <p><a href="https://play.google.com/store/apps/details?id=io.ts.mathworkout&hl=en_US&gl=US" target="_blank">Math Workout - Math Games</a>
                             <p><a href="https://play.google.com/store/apps/details?id=uk.org.nationalnumeracy.stardashstudios" target="_blank">Maths Game</a></p>
                         </div>
                     </div>
@@ -61,6 +62,7 @@
                             <h4>Computer science</h4>
                             <p><a href="https://online-learning.harvard.edu/course/cs50-introduction-computer-science?delta=0" target="_blank">Harvard CS50</a></p>
                             <p><a href="https://cs50.harvard.edu/x/2020/" target="_blank">Harvard CS50 (free certificate)</a></p>
+                            <p><a href="https://www.freecodecamp.org/" target="_blank">Free Code Camp</a></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
