--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="feature-block">
+                            <h4>Languages</h4>
+                            <p><a href="https://www.duolingo.com/" target="_blank">Duo Lingo</a></p>
+                            <p><a href="https://blog.ted.com/how-to-learn-a-new-language-7-secrets-from-ted-translators/" target="_blank">How to learn a new language</a></p>
+                            <p><a href="https://www.youtube.com/watch?v=o_XVt5rdpFY" target="_blank">The secrets of learning a new language</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
                             <h4>Computer science</h4>
                             <p><a href="https://online-learning.harvard.edu/course/cs50-introduction-computer-science?delta=0" target="_blank">Harvard CS50</a></p>
                             <p><a href="https://cs50.harvard.edu/x/2020/" target="_blank">Harvard CS50 (free certificate)</a></p>
