--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="feature-block">
                             <h4>Early School</h4>
+                            <p><a href="https://www.youtube.com/user/crashcoursekids/playlists" target="_blank">Crash Course Kids</a></p>
                             <p><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></p>
                             <p><a href="https://thecrashcourse.com/" target="_blank">Crash Course</a></p>
                             <p><a href="https://youtube.com/c/tecmath" target="_blank">TecMath</a></p>
@@ -80,6 +81,7 @@
                             <p><a href="https://www.goodreads.com/book/show/944652.Poor_Charlie_s_Almanack" target="_blank">Poor Charlie's Almanac</a></p>
                             <p><a href="https://www.goodreads.com/book/show/203409.Security_Analysis" target="_blank">Security Analysis</a></p>
                             <p><a href="https://www.youtube.com/channel/UCe3qdG0A_gr-sEdat5y2twQ" target="_blank">CA Rachana Ranade</a></p>
+                            <p><a href="https://www.youtube.com/c/TheSwedishInvestor/playlists" target="_blank">The Swedish Investor</a></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
