--- a/index.html
+++ b/index.html
@@ -33,8 +33,14 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-4">
                         <div class="feature-block">
-                            <h4>Early School</h4>
+                            <h4>Kids</h4>
                             <p><a href="https://www.youtube.com/user/crashcoursekids/playlists" target="_blank">Crash Course Kids</a></p>
+                            <p><a href="https://www.khanacademy.org/" target="_blank">Khan Academy Kids</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Early School</h4>
                             <p><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></p>
                             <p><a href="https://thecrashcourse.com/" target="_blank">Crash Course</a></p>
                             <p><a href="https://youtube.com/c/tecmath" target="_blank">TecMath</a></p>
@@ -89,6 +95,15 @@
                             <h4>Taxations</h4>
                             <p><a href="https://www.youtube.com/channel/UCVOTBwF0vnSxMRIbfSE_K_g" target="_blank">Law Advisor</a></p>
                             <p><a href="https://napkinfinance.com/" target="_blank">Napkin Finance</a></p>
+                        </div>
+                    </div>
+					<div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Dont have good internet?</h4>
+							<p>You can watch youtube offline too.</p>
+							<p>Please ask someone to download these for you</p>
+                            <p><a href="https://www.khanacademy.org/" target="_blank">Khan Academy offline</a></p>
+							<p><a href="https://learningequality.org/kolibri/" target="_blank">Kolibri offline</a></p>
                         </div>
                     </div>
                 </div>
