--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>LibgenEdu</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta content="free courses, libgen, free books, unacademy, whitehack, whitehackjr, whitehack jr, byjus, byju, vedantu, BYJU’S, Toppr, Doubtnut, GradeUp, TestBook, online courses" name="keywords" />
-        <meta content="A compendium to provide access to world class education, free forever." name="description" />
+        <meta content="A compendium to provide access to world class education, free forever. Because Education should be a basic human right and not something to profit from." name="description" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
