--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>LibgenEdu</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
         <meta content="free courses, libgen, free books, unacademy, whitehack, whitehackjr, whitehack jr, byjus, byju, vedantu, BYJU’S, Toppr, Doubtnut, GradeUp, TestBook, online courses" name="keywords" />
-        <meta content="A compendium to provide access to world class education, free forever. Because Education should be a basic human right and not something to profit from." name="description" />
+        <meta content="A compendium to provide access to world class education, free forever." name="description" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
@@ -74,10 +74,9 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="feature-block">
-                            <h4>Computer science</h4>
-                            <p><a href="https://online-learning.harvard.edu/course/cs50-introduction-computer-science?delta=0" target="_blank">Harvard CS50</a></p>
-                            <p><a href="https://cs50.harvard.edu/x/2020/" target="_blank">Harvard CS50 (free certificate)</a></p>
-                            <p><a href="https://www.freecodecamp.org/" target="_blank">Free Code Camp</a></p>
+                            <h4>Taxations</h4>
+                            <p><a href="https://www.youtube.com/channel/UCVOTBwF0vnSxMRIbfSE_K_g" target="_blank">Law Advisor</a></p>
+                            <p><a href="https://napkinfinance.com/" target="_blank">Napkin Finance</a></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
@@ -92,9 +91,11 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="feature-block">
-                            <h4>Taxations</h4>
-                            <p><a href="https://www.youtube.com/channel/UCVOTBwF0vnSxMRIbfSE_K_g" target="_blank">Law Advisor</a></p>
-                            <p><a href="https://napkinfinance.com/" target="_blank">Napkin Finance</a></p>
+                            <h4>Computer science</h4>
+                            <p><a href="https://www.edx.org/course/cs50s-introduction-to-programming-with-scratch" target="_blank">CS50 introductory</a></p>
+							<p><a href="https://cs50.harvard.edu/x/2021/" target="_blank">Harvard CS50</a></p>
+                            <p><a href="https://cs50.harvard.edu/x/2021/certificate/" target="_blank">Harvard CS50 (free certificate)</a></p>
+                            <p><a href="https://www.freecodecamp.org/" target="_blank">Free Code Camp</a></p>							
                         </div>
                     </div>
 					<div class="col-md-6 col-lg-4">
