--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         This website is an attempt to provide a compendium of the best free available resources for education.<br />
                         Because Education should be a basic human right and not something to profit from.<br />
                         <br />
-                        LibgenEdu is not related to <a href="http://Libgen.rs" target="_blank">Libgen.rs</a> (which should not be used to download books just as torrents should not be used to download movies).
+                        LibgenEdu is not related to <a href="http://Libgen.rs" target="_blank">Libgen.rs</a> (which should not be used to download books just as torrents should not be used to download movies, as it is prohibited by law).
                     </p>
                 </div>
             </div>
@@ -126,9 +126,10 @@
                     </div>
                     <div class="col-md-6 col-lg-4">
                         <div class="feature-block">
-                            <h4>Firefox</h4>
-                            <p><a href="https://medium.com/swlh/give-firefox-a-chance-for-a-faster-calmer-and-distraction-free-internet-b90f656566e1" target="_blank">Calm browsing</a></p>
-                        </div>
+                            <h4>Calm browsing</h4>
+                            <p><a href="https://brave.com/" target="_blank">Brave</a></p>
+							<p><a href="https://medium.com/swlh/give-firefox-a-chance-for-a-faster-calmer-and-distraction-free-internet-b90f656566e1" target="_blank">Firefox</a></p>
+						</div>
                     </div>
                 </div>
             </div>
@@ -143,6 +144,7 @@
                                 On a path of constant self improvement.<br />
                                 The website was made because a lot of apps are selling dreams.
                             </p>
+							<a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Flibgenedu.github.io%2Fedu%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=Visits++%28today%2Ftotal%29&edge_flat=false"/></a>
                         </div>
                     </div>
                     <div class="col">
