--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="feature-block">
                             <h4>Kids</h4>
                             <p><a href="https://www.youtube.com/user/crashcoursekids/playlists" target="_blank">Crash Course Kids</a></p>
-                            <p><a href="https://www.khanacademy.org/" target="_blank">Khan Academy Kids</a></p>
+                            <p><a href="https://learn.khanacademy.org/khan-academy-kids/" target="_blank">Khan Academy Kids</a></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
