--- a/index.html
+++ b/index.html
@@ -1,65 +1,170 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>LibgenEdu</title>
-</head>
-<body>
-  <h1>LibgenEdu</h1>
-  <h1>World Class Education, Free Forever.</h1>
-  <p>This website is an attempt to provide a compendium of the best free available resources for education. Because Education should be a basic human right and not something to profit from. LibgenEdu is not related to <a href="http://Libgen.rs">Libgen.rs</a> (which should not be used to download books just as torrents should not be used to download movies, as it is prohibited by law).</p>
-  <h4>Kids</h4>
-  <p><a href="https://www.youtube.com/user/crashcoursekids/playlists">Crash Course Kids</a></p>
-  <p><a href="https://learn.khanacademy.org/khan-academy-kids/">Khan Academy Kids</a></p>
-  <h4>Early School</h4>
-  <p><a href="https://www.khanacademy.org/">Khan Academy</a></p>
-  <p><a href="https://thecrashcourse.com/">Crash Course</a></p>
-  <p><a href="https://youtube.com/c/tecmath">TecMath</a></p>
-  <p><a href="https://play.google.com/store/apps/details?id=io.ts.mathworkout&amp;hl=en_US&amp;gl=US">Math Workout - Math Games</a></p>
-  <p><a href="https://play.google.com/store/apps/details?id=uk.org.nationalnumeracy.stardashstudios">Maths Game</a></p>
-  <h4>High School</h4>
-  <p><a href="https://www.khanacademy.org/">Khan Academy</a></p>
-  <p><a href="https://thecrashcourse.com/">Crash Course</a></p>
-  <p><a href="https://ocw.mit.edu/index.htm">MIT OCW</a></p>
-  <h4>College</h4>
-  <p><a href="https://ocw.mit.edu/index.htm">MIT OCW</a></p>
-  <p><a href="https://www.edx.org/">EDx</a></p>
-  <p><a href="https://www.CourseEra.org/">CourseEra</a></p>
-  <h4>Languages</h4>
-  <p><a href="https://www.duolingo.com/">Duo Lingo</a></p>
-  <p><a href="https://blog.ted.com/how-to-learn-a-new-language-7-secrets-from-ted-translators/">How to learn a new language</a></p>
-  <p><a href="https://www.youtube.com/watch?v=o_XVt5rdpFY">The secrets of learning a new language</a></p>
-  <h4>Taxations</h4>
-  <p><a href="https://www.youtube.com/channel/UCVOTBwF0vnSxMRIbfSE_K_g">Law Advisor</a></p>
-  <p><a href="https://napkinfinance.com/">Napkin Finance</a></p>
-  <h4>Value Investing</h4>
-  <p><a href="https://www.goodreads.com/book/show/106835.The_Intelligent_Investor">Intelligent Investor</a></p>
-  <p><a href="https://www.goodreads.com/book/show/944652.Poor_Charlie_s_Almanack">Poor Charlie's Almanac</a></p>
-  <p><a href="https://www.goodreads.com/book/show/203409.Security_Analysis">Security Analysis</a></p>
-  <p><a href="https://www.youtube.com/channel/UCe3qdG0A_gr-sEdat5y2twQ">CA Rachana Ranade</a></p>
-  <p><a href="https://www.youtube.com/c/TheSwedishInvestor/playlists">The Swedish Investor</a></p>
-  <h4>Computer science</h4>
-  <p><a href="https://www.edx.org/course/cs50s-introduction-to-programming-with-scratch">CS50 introductory</a></p>
-  <p><a href="https://cs50.harvard.edu/x/2021/">Harvard CS50</a></p>
-  <p><a href="https://cs50.harvard.edu/x/2021/certificate/">Harvard CS50 (free certificate)</a></p>
-  <p><a href="https://www.freecodecamp.org/">Free Code Camp</a></p>
-  <h4>Dont have good internet?</h4>
-  <p>You can watch youtube offline too.</p>
-  <p>Please ask someone to download these for you</p>
-  <p><a href="https://www.khanacademy.org/downloads">Khan Academy offline</a></p>
-  <p><a href="https://learningequality.org/kolibri/">Kolibri offline</a></p>
-  <p>Tips: For a distraction free internet.</p>
-  <h4>Ublock origin</h4>
-  <p><a href="https://github.com/gorhill/uBlock#installation">Ad free browsing</a></p>
-  <h4>Youtube Vanced</h4>
-  <p><a href="https://vancedapp.com/">Ad free youtube</a></p>
-  <h4>Calm browsing</h4>
-  <p><a href="https://brave.com/">Brave</a></p>
-  <p><a href="https://medium.com/swlh/give-firefox-a-chance-for-a-faster-calmer-and-distraction-free-internet-b90f656566e1">Firefox</a></p>
-  <p>LibgenEdu</p>
-  <p>On a path of constant self improvement. The website was made because a lot of apps are selling dreams.</p><a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Flibgenedu.github.io%2Fedu%2F&amp;count_bg=%2379C83D&amp;title_bg=%23555555&amp;icon=&amp;icon_color=%23E7E7E7&amp;title=Visits++%28today%2Ftotal%29&amp;edge_flat=false" alt="badge"></a>
-  <p>Sharing is caring.</p>
-  <p>Consider sharing on social media:</p>
-  <p>Hey, check out this cool website that is trying to provide access to world class free education, "LibgenEdu".</p>
-  <p>Designed by Someone like You.</p><a href="#"><i>^</i></a>
-</body>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>LibgenEdu</title>
+        <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+        <meta content="free courses, libgen, free books, unacademy, whitehack, whitehackjr, whitehack jr, byjus, byju, vedantu, BYJU’S, Toppr, Doubtnut, GradeUp, TestBook, online courses" name="keywords" />
+        <meta content="A compendium to provide access to world class education, free forever." name="description" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    </head>
+    <body>
+        <header class="header header-hide" id="header">
+            <div class="container">
+                <div class="pull-left" id="logo">
+                    <h1><span>LibgenEdu</span></h1>
+                </div>
+            </div>
+        </header>
+        <section class="padd-section text-center wow fadeInUp" id="features">
+            <div class="container">
+                <div class="section-title text-center">
+                    <h1>World Class Education, Free Forever.</h1>
+                    <br />
+                    <p class="separator">
+                        This website is an attempt to provide a compendium of the best free available resources for education.<br />
+                        Because Education should be a basic human right and not something to profit from.<br />
+                        <br />
+                        LibgenEdu is not related to <a href="http://Libgen.rs" target="_blank">Libgen.rs</a> (which should not be used to download books just as torrents should not be used to download movies, as it is prohibited by law).
+                    </p>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Kids</h4>
+                            <p><a href="https://www.youtube.com/user/crashcoursekids/playlists" target="_blank">Crash Course Kids</a></p>
+                            <p><a href="https://learn.khanacademy.org/khan-academy-kids/" target="_blank">Khan Academy Kids</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Early School</h4>
+                            <p><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></p>
+                            <p><a href="https://thecrashcourse.com/" target="_blank">Crash Course</a></p>
+                            <p><a href="https://youtube.com/c/tecmath" target="_blank">TecMath</a></p>
+                            <p><a href="https://play.google.com/store/apps/details?id=io.ts.mathworkout&hl=en_US&gl=US" target="_blank">Math Workout - Math Games</a>
+                            <p><a href="https://play.google.com/store/apps/details?id=uk.org.nationalnumeracy.stardashstudios" target="_blank">Maths Game</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>High School</h4>
+                            <p><a href="https://www.khanacademy.org/" target="_blank">Khan Academy</a></p>
+                            <p><a href="https://thecrashcourse.com/" target="_blank">Crash Course</a></p>
+                            <p><a href="https://ocw.mit.edu/index.htm" target="_blank">MIT OCW</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>College</h4>
+                            <p><a href="https://ocw.mit.edu/index.htm" target="_blank">MIT OCW</a></p>
+                            <p><a href="https://www.edx.org/" target="_blank">EDx</a></p>
+                            <p><a href="https://www.CourseEra.org/" target="_blank">CourseEra</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Languages</h4>
+                            <p><a href="https://www.duolingo.com/" target="_blank">Duo Lingo</a></p>
+                            <p><a href="https://blog.ted.com/how-to-learn-a-new-language-7-secrets-from-ted-translators/" target="_blank">How to learn a new language</a></p>
+                            <p><a href="https://www.youtube.com/watch?v=o_XVt5rdpFY" target="_blank">The secrets of learning a new language</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Taxations</h4>
+                            <p><a href="https://www.youtube.com/channel/UCVOTBwF0vnSxMRIbfSE_K_g" target="_blank">Law Advisor</a></p>
+                            <p><a href="https://napkinfinance.com/" target="_blank">Napkin Finance</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Value Investing</h4>
+                            <p><a href="https://www.goodreads.com/book/show/106835.The_Intelligent_Investor" target="_blank">Intelligent Investor</a></p>
+                            <p><a href="https://www.goodreads.com/book/show/944652.Poor_Charlie_s_Almanack" target="_blank">Poor Charlie's Almanac</a></p>
+                            <p><a href="https://www.goodreads.com/book/show/203409.Security_Analysis" target="_blank">Security Analysis</a></p>
+                            <p><a href="https://www.youtube.com/channel/UCe3qdG0A_gr-sEdat5y2twQ" target="_blank">CA Rachana Ranade</a></p>
+                            <p><a href="https://www.youtube.com/c/TheSwedishInvestor/playlists" target="_blank">The Swedish Investor</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Computer science</h4>
+                            <p><a href="https://www.edx.org/course/cs50s-introduction-to-programming-with-scratch" target="_blank">CS50 introductory</a></p>
+							<p><a href="https://cs50.harvard.edu/x/2021/" target="_blank">Harvard CS50</a></p>
+                            <p><a href="https://cs50.harvard.edu/x/2021/certificate/" target="_blank">Harvard CS50 (free certificate)</a></p>
+                            <p><a href="https://www.freecodecamp.org/" target="_blank">Free Code Camp</a></p>							
+                        </div>
+                    </div>
+					<div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Dont have good internet?</h4>
+							<p>You can watch youtube offline too.</p>
+							<p>Please ask someone to download these for you</p>
+                            <p><a href="https://www.khanacademy.org/downloads" target="_blank">Khan Academy offline</a></p>
+							<p><a href="https://learningequality.org/kolibri/" target="_blank">Kolibri offline</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="section-title text-center"><p class="separator">Tips: For a distraction free internet.</p></div>
+                <div class="row">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Ublock origin</h4>
+                            <p><a href="https://github.com/gorhill/uBlock#installation" target="_blank">Ad free browsing</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Youtube Vanced</h4>
+                            <p><a href="https://vancedapp.com/" target="_blank">Ad free youtube</a></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="feature-block">
+                            <h4>Calm browsing</h4>
+                            <p><a href="https://brave.com/" target="_blank">Brave</a></p>
+							<p><a href="https://medium.com/swlh/give-firefox-a-chance-for-a-faster-calmer-and-distraction-free-internet-b90f656566e1" target="_blank">Firefox</a></p>
+						</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="footer-logo">
+                            <p class="navbar-brand">LibgenEdu</p>
+                            <p>On a path of constant self improvement.
+							<br/>The website was made because a lot of apps are selling dreams.</p>
+							<a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Flibgenedu.github.io%2Fedu%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=Visits++%28today%2Ftotal%29&edge_flat=false"/></a>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="footer-logo">
+                            <p class="navbar-brand">Sharing is caring.</p>
+                            <p>Consider sharing on social media:</p>
+                            <p>Hey, check out this cool website that is trying to provide access to world class free education, "LibgenEdu".</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="copyrights">
+                <div class="container"><p>Designed by Someone like You.</p></div>
+            </div>
+        </footer>
+        <a class="back-to-top" href="#"><i>^</i></a><link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" media="print" onload="this.media='all'" rel="stylesheet" />
+        <style>
+            body {background-color: #fff;color: #333 }h1,h2,h3,h4,h5,h6 {margin: 0 }h4 {color: #000;font-size: 13px;font-weight: 700;letter-spacing: 2px;text-transform: uppercase;line-height: 2 }a {letter-spacing: 2px;text-decoration: none }p {color: #505050;font-size: 14px;font-weight: 300;letter-spacing: 0.5px;line-height: 2;margin-bottom: 20px }span {letter-spacing: 1px }.back-to-top {position: fixed;display: none;background: #71c55d;line-height: 1;color: #fff;padding: 7px 12px 13px 12px;font-size: 16px;border-radius: 2px;right: 15px;bottom: 15px;transition: background 0.5s }@media (max-width: 768px) {.back-to-top {bottom:15px }}.back-to-top:focus {background: #71c55d;color: #fff;outline: none }.back-to-top:hover {background: #55b03f;color: #fff }#header {background: #fff;position: fixed;left: 0;top: 0;right: 0;height: 48px;z-index: 3;transition: all 0.5s ease }#header #logo {padding: 6px 0 0 0 }#header #logo h1 {color: #505050;font-family: "Philosopher",sans-serif;font-size: 26px;font-weight: 500;letter-spacing: 1px;margin: 0 }.padd-section {padding-bottom: 80px;padding-top: 80px }@media (max-width: 992px) {.padd-section {padding-top:40px;padding-bottom: 40px }}.section-title {margin-bottom: 80px }@media (max-width: 992px) {.section-title {margin-bottom:40px }}.section-title .separator {margin: 0 }.separator {color: #626262;font-family: "Roboto",sans-serif;font-size: 15px;font-weight: 300;margin-bottom: 30px;text-transform: capitalize }#features {display: inline-block;height: 100%;width: 100% }#features .feature-block {background: #fff none repeat scroll 0 0;padding: 30px 20px;margin-bottom: 30px;transition: all 0.5s ease-in-out 0s }#features .feature-block:hover {box-shadow: 0 0 35px rgba(0, 0, 0, 0.1);transition: all 0.5s ease-in-out 0s }#features .feature-block h4 {margin-bottom: 20px }#features .feature-block p {margin-bottom: 0 }.footer {background: #2a2c30;padding-top: 50px }.footer .footer-logo .navbar-brand {color: #fff;display: inline-block;float: none;font-family: "Philosopher",sans-serif;font-size: 24px;font-weight: 500;height: 100%;letter-spacing: 0.2em;padding-left: 0;padding-top: 0 }.footer .footer-logo p {color: #fff;font-size: 12px;letter-spacing: 1px }.footer .copyrights {background: #fff;margin-top: 50px;text-align: center;padding: 25px }.footer .copyrights p, .footer .copyrights .credits {margin: 0;padding: 0;font-family: "Open Sans",sans-serif;font-weight: normal;font-size: 14px;letter-spacing: 0 }
+        </style>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <script>
+            jQuery(document).ready(function(o){if(o(window).scroll(function(){o(window).height(),o(window).scrollTop()?o(".header-hide").addClass("scroll-header"):o(".header-hide").removeClass("scroll-header")}),o(window).scroll(function(){o(this).scrollTop()>100?o(".back-to-top").fadeIn("slow"):o(".back-to-top").fadeOut("slow")}),o(".back-to-top").click(function(){return o("html, body").animate({scrollTop:0},1500,"easeInOutExpo"),!1}),o("#nav-menu-container").length){var e=o("#nav-menu-container").clone().prop({id:"mobile-nav"});e.find("> ul").attr({"class":"",id:""}),o("body").append(e),o("body").prepend('<button type="button" id="mobile-nav-toggle"><i class="fa fa-bars"></i></button>'),o("body").append('<div id="mobile-body-overly"></div>'),o("#mobile-nav").find(".menu-has-children").prepend('<i class="fa fa-chevron-down"></i>')}else o("#mobile-nav, #mobile-nav-toggle").length&&o("#mobile-nav, #mobile-nav-toggle").hide()});
+        </script>
+    </body>
 </html>
