--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>LibgenEdu</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-        <meta content="free courses, libgen, free books, unacademy, whitehack, whitehackjr, whitehack jr, byjus, byju, vedantu, BYJU’S, Toppr, Doubtnut, GradeUp, TestBook, online courses" name="keywords" />
+        <meta content="free courses, libgen, libgen edu, libgenedu, free books, unacademy, whitehack, whitehackjr, whitehack jr, byjus, byju, vedantu, BYJU’S, Toppr, Doubtnut, GradeUp, TestBook, online courses" name="keywords" />
         <meta content="A compendium to provide access to world class education, free forever." name="description" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
@@ -20,12 +20,12 @@
             <div class="container">
                 <div class="section-title text-center">
                     <h1>World Class Education, Free Forever.</h1>
-                    <br />
+                    <br/>
                     <p class="separator">
-                        This website is an attempt to provide a compendium of the best free available resources for education.<br />
-                        Because Education should be a basic human right and not something to profit from.<br />
-                        <br />
-                        LibgenEdu is not related to <a href="http://Libgen.rs" target="_blank">Libgen.rs</a> (which should not be used to download books just as torrents should not be used to download movies, as it is prohibited by law).
+                        Libgen Edu is an attempt to provide a compendium of the best free available resources for education.<br/>
+                        Because Education should be a basic human right and not something to profit from.<br/>
+                        <br/>
+                        LibgenEdu is not related to <a href="http://Libgen.rs" target="_blank">Libgen.rs</a><br/>(which should not be used to download books, as it is prohibited by law).
                     </p>
                 </div>
             </div>
@@ -75,7 +75,7 @@
                     <div class="col-md-6 col-lg-4">
                         <div class="feature-block">
                             <h4>Taxations</h4>
-                            <p><a href="https://www.youtube.com/channel/UCVOTBwF0vnSxMRIbfSE_K_g" target="_blank">Law Advisor</a></p>
+                            <p><a href="https://www.youtube.com/channel/UCVOTBwF0vnSxMRIbfSE_K_g" target="_blank">Labour Law Advisor</a></p>
                             <p><a href="https://napkinfinance.com/" target="_blank">Napkin Finance</a></p>
                         </div>
                     </div>
@@ -87,6 +87,7 @@
                             <p><a href="https://www.goodreads.com/book/show/203409.Security_Analysis" target="_blank">Security Analysis</a></p>
                             <p><a href="https://www.youtube.com/channel/UCe3qdG0A_gr-sEdat5y2twQ" target="_blank">CA Rachana Ranade</a></p>
                             <p><a href="https://www.youtube.com/c/TheSwedishInvestor/playlists" target="_blank">The Swedish Investor</a></p>
+                            <p><a href="http://pages.stern.nyu.edu/~adamodar/" target="_blank">Aswath Damodaran</a></p>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4">
@@ -149,13 +150,15 @@
                         <div class="footer-logo">
                             <p class="navbar-brand">Sharing is caring.</p>
                             <p>Consider sharing on social media:</p>
-                            <p>Hey, check out this cool website that is trying to provide access to world class free education, "LibgenEdu".</p>
-                        </div>
+							<p>Hey check out this cool website for completely free access to world class education, "LibgenEdu".</p>
+                            <a href="https://twitter.com/intent/tweet?text=Hey%20check%20out%20this%20cool%20website%20for%20completely%20free%20access%20to%20world%20class%20education%20LibgenEdu" target=”_blank”>Click to Tweet</a>
+                            or <a href="https://www.facebook.com/share.php?u=https://libgenedu.github.io/edu/" target=”_blank”>Post on FB</a>
+						</div>
                     </div>
                 </div>
             </div>
             <div class="copyrights">
-                <div class="container"><p>Designed by Someone like You.</p></div>
+                <div class="container"><p>You are free to promote the website in a positive manner on any platform.</p></div>
             </div>
         </footer>
         <a class="back-to-top" href="#"><i>^</i></a><link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" media="print" onload="this.media='all'" rel="stylesheet" />
