--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         Libgen Edu is an attempt to provide a compendium of the best free available resources for education.<br/>
                         Because Education should be a basic human right and not something to profit from.<br/>
                         <br/>
-                        LibgenEdu is not related to <a href="http://Libgen.rs" target="_blank">Libgen.rs</a><br/>(which should not be used to download books, as it is prohibited by law).
+                        LibgenEdu is not related to <a href="http://Libgen.rs" target="_blank">Libgen</a><br/>(which should not be used to download ebooks, as it is prohibited by law).
                     </p>
                 </div>
             </div>
