--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <button type="button" data-bs-target="#bgimage" data-bs-slide-to="1" aria-label="Slide 2"></button>
   </div> -->
 		<div class="carousel-inner">
-			<img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/banner-img.jpg">
+			<img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/banner-img.webp">
 			<div class="carousel-item active" data-bs-interval="2000"></div>
 			<div class="carousel-item" data-bs-interval="15000">
 				<div class="carousel-caption">
