--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<div class="row">
 			<div class="col-sm-4">
 				<div class="card text-center bg-light mb-3">
-					<img alt="..." class="card-img-top d-none d-md-block" src="img/banner-img.jpg">
+					<img alt="..." class="card-img-top d-none d-md-block" src="img/h1.webp">
 					<div class="card-body">
 						<h5 class="card-title">Staycation, The X's Way</h5>
 						<p class="card-text">Great offers on offseason staycations of 15 or more nights.</p><button class="btn btn-secondary" data-bs-target="#exampleModal" data-bs-toggle="modal" type="button">Learn more</button>
@@ -119,7 +119,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="card text-center bg-light mb-3">
-					<img alt="..." class="card-img-top d-none d-md-block" src="img/banner-img.jpg">
+					<img alt="..." class="card-img-top d-none d-md-block" src="img/h2.webp">
 					<div class="card-body">
 						<h5 class="card-title">With Our Compliments</h5>
 						<p class="card-text">Book a stay of 3 nights and enjoy a complimentary night on us.</p><a class="btn btn-secondary" href="#">Book Now</a>
@@ -128,7 +128,7 @@
 			</div>
 			<div class="col-sm-4">
 				<div class="card text-center bg-light mb-3">
-					<img alt="..." class="card-img-top d-none d-md-block" src="img/banner-img.jpg">
+					<img alt="..." class="card-img-top d-none d-md-block" src="img/h3.webp">
 					<div class="card-body">
 						<h5 class="card-title">The Gift of The X</h5>
 						<p class="card-text">Surprise family and friends by delighting them with a stay at The X.</p><button class="btn btn-secondary" data-bs-target="#exampleModal1" data-bs-toggle="modal" type="button">Learn more</button>
@@ -153,9 +153,9 @@
 	</div><!-- Mini gallery Area -->
 	<div class="section bg-dark text-white">
 		<div class="row g-0">
-			<div class="col-lg-4 col-md-4 col-12 mb-lg-0 overflow-hidden"><img alt="..." class="geeks img-fluid w-100" src="img/h1.jpg"> <img alt="..." class="geeks img-fluid w-100 d-none d-md-block" src="img/v1.jpg"></div>
-			<div class="col-lg-4 col-md-4 col-12 mb-lg-0 overflow-hidden"><img alt="..." class="geeks img-fluid w-100 d-none d-md-block" src="img/v2.jpg"> <img alt="..." class="geeks img-fluid w-100" src="img/h2.jpg"></div>
-			<div class="col-lg-4 col-md-4 col-12 mb-lg-0 overflow-hidden"><img alt="..." class="geeks img-fluid w-100" src="img/h3.jpg"> <img alt="..." class="geeks img-fluid w-100 d-none d-md-block" src="img/v3.jpg"></div>
+			<div class="col-lg-4 col-md-4 col-12 mb-lg-0 overflow-hidden"><img alt="..." class="geeks img-fluid w-100" src="img/h4.webp"> <img alt="..." class="geeks img-fluid w-100 d-none d-md-block" src="img/v1.webp"></div>
+			<div class="col-lg-4 col-md-4 col-12 mb-lg-0 overflow-hidden"><img alt="..." class="geeks img-fluid w-100 d-none d-md-block" src="img/v2.webp"> <img alt="..." class="geeks img-fluid w-100" src="img/h5.webp"></div>
+			<div class="col-lg-4 col-md-4 col-12 mb-lg-0 overflow-hidden"><img alt="..." class="geeks img-fluid w-100" src="img/h6.webp"> <img alt="..." class="geeks img-fluid w-100 d-none d-md-block" src="img/v3.webp"></div>
 		</div>
 	</div><!-- Footer Area -->
 	<svg style="display: none;" xmlns="http://www.w3.org/2000/svg">
