--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <button type="button" data-bs-target="#bgimage" data-bs-slide-to="1" aria-label="Slide 2"></button>
   </div> -->
 		<div class="carousel-inner">
+			<!-- 1920*1280 -->
 			<img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/banner-img.webp">
 			<div class="carousel-item active" data-bs-interval="2000"></div>
 			<div class="carousel-item" data-bs-interval="15000">
@@ -94,6 +95,7 @@
 	</div><!-- Main Content Area -->
 	<div class="container-fluid d-grid gap-5">
 		<div class="row">
+			<!-- 640*427 -->
 			<div class="col-sm-4">
 				<div class="card text-center bg-light mb-3">
 					<img alt="..." class="card-img-top d-none d-md-block" src="img/h1.webp">
@@ -153,9 +155,10 @@
 	</div><!-- Mini gallery Area -->
 	<div class="section bg-dark text-white">
 		<div class="row g-0">
-			<div class="col-lg-4 col-md-4 col-12 mb-lg-0 overflow-hidden"><img alt="..." class="geeks img-fluid w-100" src="img/h4.webp"> <img alt="..." class="geeks img-fluid w-100 d-none d-md-block" src="img/v1.webp"></div>
-			<div class="col-lg-4 col-md-4 col-12 mb-lg-0 overflow-hidden"><img alt="..." class="geeks img-fluid w-100 d-none d-md-block" src="img/v2.webp"> <img alt="..." class="geeks img-fluid w-100" src="img/h5.webp"></div>
-			<div class="col-lg-4 col-md-4 col-12 mb-lg-0 overflow-hidden"><img alt="..." class="geeks img-fluid w-100" src="img/h6.webp"> <img alt="..." class="geeks img-fluid w-100 d-none d-md-block" src="img/v3.webp"></div>
+			<!-- 1920*1280 & 640*960  -->
+			<div class="col-lg-4 col-md-4 col-12 mb-lg-0 overflow-hidden"><img alt="..." class="geeks img-fluid w-100" src="img/h4.webp"> <img alt="..." class="geeks img-fluid w-100 d-none d-md-block" src="img/v1.webp" loading="lazy"></div>
+			<div class="col-lg-4 col-md-4 col-12 mb-lg-0 overflow-hidden"><img alt="..." class="geeks img-fluid w-100 d-none d-md-block" src="img/v2.webp" loading="lazy"> <img alt="..." class="geeks img-fluid w-100" src="img/h5.webp"></div>
+			<div class="col-lg-4 col-md-4 col-12 mb-lg-0 overflow-hidden"><img alt="..." class="geeks img-fluid w-100" src="img/h6.webp"> <img alt="..." class="geeks img-fluid w-100 d-none d-md-block" src="img/v3.webp" loading="lazy"></div>
 		</div>
 	</div><!-- Footer Area -->
 	<svg style="display: none;" xmlns="http://www.w3.org/2000/svg">
