--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 	<nav class="navbar fixed-bottom navbar-light bg-dark d-lg-none" id="navbarbottom">
 		<a class="navbar-brand text-white mx-auto" href="booking.html">Book Now</a>
 	</nav>
-	<script crossorigin="anonymous" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js">
+	<script crossorigin="anonymous" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js">
 	</script> 
 	<script>
 	        var nav = document.querySelector('nav');
