--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="twitter:description"  content="">
   -->
 	<title>Bootstrap 5 - Website</title>
-	<link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" rel="stylesheet" media="print" onload="this.media='all'">
+	<link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" media="print" onload="this.media='all'">
 </head>
 <body class="bg-secondary">
