--- a/gallery.html
+++ b/gallery.html
@@ -61,20 +61,20 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-1.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-2.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-3.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-4.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-5.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-6.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-7.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-8.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-9.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-10.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-11.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-12.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-13.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-14.jpg"></div>
-			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-15.jpg"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-2.jpg" loading="lazy"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-3.jpg" loading="lazy"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-4.jpg" loading="lazy"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-5.jpg" loading="lazy"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-6.jpg" loading="lazy"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-7.jpg" loading="lazy"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-8.jpg" loading="lazy"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-9.jpg" loading="lazy"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-10.jpg" loading="lazy"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-11.jpg" loading="lazy"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-12.jpg" loading="lazy"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-13.jpg" loading="lazy"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-14.jpg" loading="lazy"></div>
+			<div class="carousel-item"><img alt="..." class="img-fluid vh-100 w-100 d-flex justify-content-center align-items-center" src="img/gallery/gallery-img-15.jpg" loading="lazy"></div>
 		</div><button class="carousel-control-prev" data-bs-slide="prev" data-bs-target="#bgimage" type="button"><span aria-hidden="true" class="carousel-control-prev-icon"></span> <span class="visually-hidden">Previous</span></button> <button class="carousel-control-next" data-bs-slide="next" data-bs-target="#bgimage" type="button"><span aria-hidden="true" class="carousel-control-next-icon"></span> <span class="visually-hidden">Next</span></button>
 	</div><!-- Footer Area -->
 	<svg style="display: none;" xmlns="http://www.w3.org/2000/svg">
