--- a/gallery1.html
+++ b/gallery1.html
@@ -71,37 +71,37 @@
 				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-4.jpg"></div>
 			</div>
 			<div class="row g-0">
-				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-5.jpg"></div>
+				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-5.jpg" loading="lazy"></div>
 			</div>
 			<div class="row g-0">
-				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-6.jpg"></div>
+				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-6.jpg" loading="lazy"></div>
 			</div>
 			<div class="row g-0">
-				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-7.jpg"></div>
+				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-7.jpg" loading="lazy"></div>
 			</div>
 			<div class="row g-0">
-				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-8.jpg"></div>
+				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-8.jpg" loading="lazy"></div>
 			</div>
 			<div class="row g-0">
-				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-9.jpg"></div>
+				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-9.jpg" loading="lazy"></div>
 			</div>
 			<div class="row g-0">
-				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-10.jpg"></div>
+				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-10.jpg" loading="lazy"></div>
 			</div>
 			<div class="row g-0">
-				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-11.jpg"></div>
+				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-11.jpg" loading="lazy"></div>
 			</div>
 			<div class="row g-0">
-				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-12.jpg"></div>
+				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-12.jpg" loading="lazy"></div>
 			</div>
 			<div class="row g-0">
-				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-13.jpg"></div>
+				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-13.jpg" loading="lazy"></div>
 			</div>
 			<div class="row g-0">
-				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-14.jpg"></div>
+				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-14.jpg" loading="lazy"></div>
 			</div>
 			<div class="row g-0">
-				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-15.jpg"></div>
+				<div class="col-12 overflow-hidden"><img alt="..." class="img-fluid" data-sizes="auto" data-srcset="" src="img/gallery/gallery-img-15.jpg" loading="lazy"></div>
 			</div>
 			
 		
